[package]
name = "wave-art"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wave-art"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
# Pin to match nixpkgs wasm-bindgen-cli 0.2.114 — trunk requires exact match
wasm-bindgen = "=0.2.114"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
] }
